# Task-Manager

./: .gitignore  README.md  app.py  data.py  errors.py  model.py  pyproject.toml  task.json
src/taskmanager/: app.py
src/taskmanager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
test/: test.py
